--- a/src/main/resources/static/css/membershipPage.css
+++ b/src/main/resources/static/css/membershipPage.css
@@ -134,6 +134,13 @@
 
 }
 
+.accordion-button collapsed{
+	
+	background-color: #14213d !important;
+    color: white !important;
+    font-weight: bold !important;
+	
+}
 .accordion-collapse {
   overflow: auto; 
 }
@@ -231,24 +238,19 @@
 
 
 
-/* 스크롤바의 전체 스타일을 정의합니다 */
-.accordion-collapse::-webkit-scrollbar {
-    width: 12px; /* 스크롤바의 너비 */
+
+
+
+.accordion-button:not(.collapsed) {
+    background: #fca311 ; /* 펼쳐졌을 때 배경색 */
+    color: #ffffff; /* 텍스트 색상 */
 }
 
-/* 스크롤바의 트랙(배경) 스타일을 정의합니다 */
-.accordion-collapse::-webkit-scrollbar-track {
-    background: #f1f1f1; /* 배경색 */
-    border-radius: 10px; /* 모서리 둥글기 */
+
+.accordion-button.collapsed {
+    background: #14213d; /* 닫혔을 때 배경색 */
+    color: #ffffff; /* 텍스트 색상 */
 }
 
-/* 스크롤바의 핸들(사용자가 드래그하는 부분) 스타일을 정의합니다 */
-.accordion-collapse::-webkit-scrollbar-thumb {
-    background: #888; /* 핸들의 색상 */
-    border-radius: 10px; /* 핸들의 모서리 둥글기 */
-}
 
-/* 스크롤바 핸들에 마우스 오버 시 스타일을 정의합니다 */
-.accordion-collapse::-webkit-scrollbar-thumb:hover {
-    background: #555; /* 마우스 오버 시 핸들의 색상 */
-}
+
