--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -191,7 +191,7 @@ div[id^="comment-box"] > input {
 	padding-left: 10px;
   margin-bottom: 5px;
 }
-.button {
+.btn {
   background-color: #fca311;
   color: #fff;
   border: none;
