--- a/src/main/resources/static/css/headerIndex.css
+++ b/src/main/resources/static/css/headerIndex.css
@@ -3,7 +3,6 @@
 */
 
 .main_header {
-  background-color:#ADD8E6;
   position: fixed;
   width: 100%;
   height: 80px;
@@ -15,14 +14,14 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  max-width: 800px;
+  max-width: 1520px;
   margin: auto;
 }
 /*헤더 왼쪽*/
 .main_header_left {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
@@ -39,7 +38,7 @@
   justify-content: flex-start;
   align-items: center;
   text-align: center;
-  font-size: 55px;
+  font-size: 60px;
   height: 100%;
   width: 100%;
   font-weight: bold;
@@ -50,6 +49,7 @@
   color: #fca35b;
   text-shadow: 4.5px 2px black;
 }
+
 /*헤더 오른쪽*/
 .main_header_right {
   display: flex;
