--- a/src/main/resources/static/css/headerMemberShip.css
+++ b/src/main/resources/static/css/headerMemberShip.css
@@ -3,6 +3,7 @@
 */
 
 .main_header {
+  background-color:#ADD8E6;
   position: fixed;
   width: 100%;
   height: 80px;
@@ -13,15 +14,15 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-
   width: 100%;
-  min-width: 1000px;
+  max-width: 1520px;
+  margin: auto;
 }
 /*헤더 왼쪽*/
 .main_header_left {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
   width: 100%;
 }
@@ -38,7 +39,7 @@
   justify-content: flex-start;
   align-items: center;
   text-align: center;
-  font-size: 60px;
+  font-size: 55px;
   height: 100%;
   width: 100%;
   font-weight: bold;
@@ -49,12 +50,11 @@
   color: #fca35b;
   text-shadow: 4.5px 2px black;
 }
-
 /*헤더 오른쪽*/
 .main_header_right {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   height: 100%;
   width: 100%;
   font-size: 18px;
