--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -105,6 +105,10 @@ body {
 form {
   margin-top: 20px;
 }
+#comment-frm{
+	max-width: 820px;
+	width: 100%;
+}
 
 input[type="submit"] {
   background-color: #fca311;
@@ -143,15 +147,17 @@ input[type="submit"]:hover {
   margin: 10px 0px;
 }
 .re-comment > .comment-head {
-  border-top: 2px dashed;
+  border-top: 2px dashed ;
   margin-top: 10px;
   padding-top: 5px;
 }
 
 div[id^="comment-box"] {
-	border-top: 2px dashed;
-    border-radius: 0px 0px 10px 10px;
-  width: 790px;
+	text-wrap: nowrap;
+	border: 1px solid #fca311;
+    border-radius: 10px;
+    max-width: 820px;
+  width: 100%;
   height: 100px;
   display: flex;
   justify-content: space-between;
@@ -166,7 +172,8 @@ div[id^="recomment-box"] {
 
 div[id^="comment-box"] > input {
   height: 50%;
-  width: 60%;
+  width: 100%;
+  max-width: 500px;
   margin: 5px;
 }
 
