--- a/src/main/resources/static/css/meetingDetail.css
+++ b/src/main/resources/static/css/meetingDetail.css
@@ -3,6 +3,14 @@
 	height: 30px;
 	border-radius: 50%
 }
+form {
+  margin-top: 20px;
+}
+#comment-frm{
+	max-width: 820px;
+	width: 100%;
+}
+
 input[type="submit"] {
   background-color: #fca311;
   color: #fff;
@@ -40,20 +48,23 @@ input[type="submit"]:hover {
   margin: 10px 0px;
 }
 .re-comment > .comment-head {
-  border-top: 2px dashed;
+  border-top: 2px dashed ;
   margin-top: 10px;
   padding-top: 5px;
 }
 
 div[id^="comment-box"] {
-  width: 790px;
+	text-wrap: nowrap;
+	border: 1px solid #fca311;
+    border-radius: 10px;
+    max-width: 820px;
+  width: 100%;
   height: 100px;
   display: flex;
   justify-content: space-between;
   padding: 8px;
   align-items: center;
   background-color: #e5e5e5;
-  border-radius: 10px;
   margin-top: 10px;
 }
 div[id^="recomment-box"] {
@@ -62,7 +73,8 @@ div[id^="recomment-box"] {
 
 div[id^="comment-box"] > input {
   height: 50%;
-  width: 60%;
+  width: 100%;
+  max-width: 500px;
   margin: 5px;
 }
 
@@ -84,9 +96,10 @@ div[id^="comment-box"] > input {
   font-size: 1.2rem;
 }
 .comment-text {
+	padding-left: 10px;
   margin-bottom: 5px;
 }
-button {
+.btn {
   background-color: #fca311;
   color: #fff;
   border: none;
@@ -101,7 +114,7 @@ button {
   background-color: #14213d;
   color: #fff;
 }
-button:hover {
+.btn:hover {
   background-color: #e76f00;
 }
 
@@ -113,6 +126,20 @@ button > img {
 }
 .recomment-box {
   margin-left: 10px;
+}
+.prof {
+  display: flex;
+  align-items: center;
+}
+.prof img {
+  margin: 0;
+  margin-left: 10px;
+}
+#textbox > button {
+  height: 50%;
+}
+.comment > p {
+  padding: 10px;
 }
 .prof {
   display: flex;
@@ -164,7 +191,7 @@ body {
   max-width: 800px;
   /*08-29 채승훈 마진겹칩현상? 때문에 20px 뺌*/
   margin: auto;
-  
+  padding-bottom: 10px;
  
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
