--- a/src/main/resources/static/css/meetingDetail.css
+++ b/src/main/resources/static/css/meetingDetail.css
@@ -86,7 +86,7 @@ div[id^="comment-box"] > input {
 .comment-text {
   margin-bottom: 5px;
 }
-button {
+.btn {
   background-color: #fca311;
   color: #fff;
   border: none;
@@ -154,10 +154,11 @@ body {
 }
 
 #box {
+ 
+  padding-top:80px;
   display: flex;
   justify-content: center;
-  padding-top:80px;
-  flex-direction: column;
+
 }
 #container {
   width: 100%;
@@ -165,7 +166,7 @@ body {
   /*08-29 채승훈 마진겹칩현상? 때문에 20px 뺌*/
   margin: auto;
   
- 
+  background: #f4f4f4;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
@@ -192,25 +193,28 @@ body {
 	
 }
 #hostImg {
-  position: relative;
-  bottom: 55px;
+     position: relative;
+    bottom: 40px;
 }
 
 .host-img{
 	
 	width:50px;
-	heigh:50px;
+	height:50px;
 	border-radius: 50%;
 }
 
 #hostName {
   position: relative;
-  bottom: 55px;
+  bottom: 45px;
 }
 #membershipTitle {
   position: relative;
   bottom: 35px;
+      font-weight: bolder;
+    font-size: 2rem;
 }
+
 
 
 
@@ -219,7 +223,14 @@ body {
 	    margin: 20px;
 }
 
+#accordionExample {
+  width: 450px;
+ position: fixed;
+    left: 0px;
+    z-index: 99;
+   
 
+}
 
 .accordion-button collapsed{
 	
@@ -233,7 +244,7 @@ body {
 }
 
 .accordion-body {
-  max-height: 1000px; 
+  max-height: 700px; 
 }
 .accordion-button:not(.collapsed) {
     background: #fca311 ; /* 펼쳐졌을 때 배경색 */
@@ -244,5 +255,111 @@ body {
 .accordion-button.collapsed {
     background: #14213d; /* 닫혔을 때 배경색 */
     color: #ffffff; /* 텍스트 색상 */
+}
+
+.allmemberImg{
+	width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.memberTable {
+  border: 1px solid;
+  
+  padding: 20px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+.memberTable ui{
+	
+	display: flex;
+   
+    flex-direction: column;
+}
+.member-grade {
+  width: 50px;
+  text-align: center;
+  font-weight: bold;
+  
+}
+
+.member-grade span {
+  color: rgb(252, 177, 3);
+  font-size: 32px;
+  
+}
+
+.member-img-info-hobby-location {
+  display: flex;
+}
+.member-info {
+  color: gray;
+  margin-bottom: 10px;
+}
+
+.member-hobby-location{
+	
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	
+}
+.member-info-hobby-location {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.member-hobby-location {
+  border: 1px solid black;
+  border-radius: 20px;
+  width: 134px;
+  height: 28px;
+  text-align: center;
+  background: beige;
+  font-weight: bold;
+}
+
+.nickname-age-fm-manner {
+  display: flex;
+}
+.nickname-age-fm {
+  width: 90px;
+ 
+}
+.nickname {
+  font-weight: bold;
+}
+.age-fm {
+  font-size: 32px;
+  display: flex;
+  justify-content: space-around;
+}
+.manner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.manner > p {
+  margin: 20px;
+}
+#man {
+  color: blue;
+}
+#femail {
+  color: pink;
+}
+#container-calendar{
+	display:flex;
+	margin-left:450px;
+}
+#calendar {
+	background: white;
+	width: 500px;
+    height: 600px;
+    position: fixed;
+    top: 88px;
+    right: 20px
 }
 
