--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -11,7 +11,7 @@ body {
   height: 80vh;
 }
 .membership-list {
-  width: 100%;
+  width: 1280px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -19,32 +19,31 @@ body {
   justify-content: center;
   margin: auto;
   padding-top: 90px;
+  gap:20px;
 }
 .membership-card {
   display: flex;
-  background-color: #e5e5e5;
+  background-color:#f9f7f3;
   border-radius: 20px;
-  margin: 20px;
-  width: 480px;
-  height: 250px;
+  width: 630px;
+  height: 260px;
 }
 .membership-img a img {
   border-radius: 15px;
-  width: 200px;
-  height: 200px;
+  width: 220px;
+  height: 220px;
   margin: 20px;
+  box-shadow: 0px 3px 4px gray;
 }
 .membership-name {
-  color: #2a9d8f;
-  font-size: 20px;
+  color: #fca35b;
+  font-size: 25px;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
   width: 180px;
 }
 .membership-info {
-  width: 250px;
-  height: 80%;
+  width: 100%;
+  height: 225px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -53,17 +52,20 @@ body {
 }
 .host {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  padding: 10px;
+}
+.host img{
+	width: 35px;
+	height: 35px;
 }
 .membership-info h1 {
   font-weight: bolder;
 }
-.membership-info h2 {
-  margin-left: 10px;
-  width: 100%;
-  font-size: 13px;
+.membership-info >h2 {
+  margin:10px;
+  width: 97%;
+  font-size: 14px;
 }
 .user-img {
   border-radius: 50%;
@@ -71,22 +73,26 @@ body {
   height: 50px;
 }
 /* 08-21 14:53 채승훈 시작 클럽안 내용들*/
+.location{
+	width: 100%;
+	display: flex;
+	flex-flow: wrap;
+}
 .locationTypeBox {
   font-size: 12px;
   width: 200px;
 }
 .type {
   display: flex;
-  white-space: nowrap;
-  overflow: hidden;
-  background-color: red;
+  width: 250px;
+  flex-flow: wrap;
 }
 .typeList {
-  background-color: #f4f4f4;
+  background-color:rgb(228, 228, 228);
   width: fit-content; /*글자크기에 맞게 width값 주기*/
   padding: 2.5px 5px;
-  border-radius: 15px;
-  margin: 1px;
+  border-radius: 5px;
+  margin: 2px;
   color: #666060;
 }
 .typeText {
