--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -7,46 +7,6 @@ body {
 	background-color: #f4f4f4;
 }
 
-/* 헤더 nav */
-#LOGO {
-	font-size: 1rem;
-}
-
-nav {
-	overflow: hiddlen;
-	white-space: nowrap;
-	background-color: #333;
-	text-align: center;
-	display: flex;
-	justify-content: space-between;
-	padding: 5px;
-}
-
-nav div {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-nav a {
-	color: #fff;
-	text-decoration: none;
-	padding: 10px 20px;
-	display: inline-block;
-}
-
-nav a:hover {
-	background-color: #575757;
-}
-
-/* 헤더 nav */
-.header_menu {
-	color: #fff;
-	text-decoration: none;
-	padding: 10px 20px;
-	display: flex;
-	justify-content: space-between;
-}
 
 .resign {
 	padding-top: 20px;
@@ -103,7 +63,7 @@ input, select {
 }
 
 button {
-	background-color: #4caf50;
+	background-color: #1b2a41;
 	color: white;
 	padding: 10px 15px;
 	border: none;
@@ -113,7 +73,7 @@ button {
 }
 
 button:hover {
-	background-color: #45a049;
+	background-color: #324a5f;
 }
 
 #checkbox {
