--- a/src/main/resources/static/css/userInfo.css
+++ b/src/main/resources/static/css/userInfo.css
@@ -6,10 +6,11 @@ main {
 }
 
 #container {
-  max-width: 600px;
-  min-width: 600px;
+  max-width: 1280px;
+  width: 100%;
   margin: 20px;
-  padding: 20px;
+  padding-top : 100px;
+  
   height: 100%;
   background-color: #fff;
   border-radius: 8px;
@@ -79,9 +80,10 @@ main {
   padding-bottom: 10px;
 }
 .info {
+	text-wrap: nowrap;
   display: flex;
-  justify-content: space-between;
-  width: 50%;
+  justify-content: space-around;
+  width: 30%;
   padding-top: 30px;
   align-items: center;
 }
