--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background-color: white;
+  background-color:#f9f7f3;
 }
 .container {
   align-items: flex-start;
@@ -23,20 +23,20 @@ body {
 }
 .membership-card {
   display: flex;
-  background-color:#f9f7f3;
-  border-radius: 20px;
+  /*background-color:#f9f7f3;*/
+  background-color:white;
+  border-radius: 10px;
   width: 630px;
   height: 260px;
 }
 .membership-img a img {
-  border-radius: 15px;
+  border-radius: 10px;
   width: 220px;
   height: 220px;
   margin: 20px;
   box-shadow: 0px 3px 4px gray;
 }
 .membership-name {
-  color: #fca35b;
   font-size: 25px;
   white-space: nowrap;
   width: 180px;
@@ -47,7 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 20px;
+  margin: 20px 20px 20px 0px;
   border-radius: 15px;
 }
 .host {
@@ -61,6 +61,10 @@ body {
 }
 .membership-info h1 {
   font-weight: bolder;
+  width: 100%;
+  background-color: white;
+  border-radius: 5px;
+  text-align: center;
 }
 .membership-info >h2 {
   margin:10px;
