--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -19,12 +19,18 @@ body {
 .header_menu:hover {
 	background-color: #575757;
 }
+.top-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 
+}
 .container {
 	max-width: 600px;
 	min-width: 600px;
-	margin: 20px auto;
 	padding: 20px;
+	margin-top: 120px;
 	background-color: #fff;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
