--- a/src/main/resources/static/css/memberDelete.css
+++ b/src/main/resources/static/css/memberDelete.css
@@ -22,12 +22,18 @@ strong {
 .container>* {
 	margin-bottom: 20px;
 }
+.top-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 
+}
 .container {
 	max-width: 800px;
 	min-width: 800px;
-	margin: 20px auto;
 	padding: 20px;
+	margin-top: 120px;
 	background: #fff;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
