--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -39,7 +39,13 @@ input[type=text] {
 	border-radius: 10px;
 	background-color: rgb(233, 233, 233);
 }
+.top-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 
+}
 .club-button {
 	display: flex;
 	align-items: center;
@@ -51,9 +57,9 @@ input[type=text] {
 	background-color: #fff;
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	margin: 20px auto;
 	max-width: 600px;
 	min-width: 600px;
+	margin-top: 120px;
 	padding: 20px;
 	text-align: center;
 	
@@ -159,6 +165,7 @@ input[type=text] {
 /* 가입 대기중인 클럽 보기 */
 .container {
 	max-width: 600px;
+	min-width: 600px;
 	margin: 20px auto;
 	padding: 20px;
 	background-color: #fff;
@@ -177,7 +184,6 @@ input[type=text] {
 
 .membership-each {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
 	border-bottom: 1px solid #ddd;
 	padding: 10px;
@@ -218,15 +224,25 @@ input[type=text] {
 .membership-each {
 	display: flex;
 	align-items: center;
+	justify-content: space-around;
 }
 
 .membership-String {
-	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+.membership-String h4{
+	padding-bottom: 20px;
+	font-size: 1.2rem;
+	font-weight: 500;
 }
 
 .membership-String p {
-	margin: 0;
-	padding: 5px 0;
+	padding-bottom: 20px;
+	
+}
+.membership-text{
+	width: 350px;
 }
 
 /* 버튼 스타일 */
