--- a/src/main/resources/static/css/updateCheck.css
+++ b/src/main/resources/static/css/updateCheck.css
@@ -55,7 +55,7 @@ button {
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #0c1821;
     color: #fff;
     font-size: 1em;
     cursor: pointer;
@@ -63,7 +63,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: navy;
 }
 
 /* 에러 메시지 스타일링 */
