--- a/src/main/resources/static/css/membershipPage.css
+++ b/src/main/resources/static/css/membershipPage.css
@@ -106,24 +106,82 @@
   margin-top: 20px;
 }
 
-.locTyBox {
-  width: 100%;
-  padding: 20px;
-}
 
 
-#option {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
 
 .allmemberImg {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin-right: 20px;
+ 
 }
+
+
+.memberTable {
+  border: 1px solid;
+  
+  padding: 20px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+.memberTable ui{
+	
+	display: flex;
+   
+    flex-direction: column;
+}
+.member-grade {
+
+  text-align: center;
+  font-weight: bold;
+      text-wrap: nowrap;
+  
+}
+
+.member-grade span {
+  color: rgb(252, 177, 3);
+  font-size: 20px;
+  
+}
+
+
+.member-img-icon-nickname-manner{
+	display: flex;
+	justify-content: space-evenly;
+}
+.member-img-icon{
+	
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+}
+.nickname-manner {
+	
+	    display: flex;
+    flex-direction: column;
+    justify-content: center;
+        position: relative;
+    top: 12px;
+}
+.manner{
+	display:flex;
+	justify-content: center;
+    align-items: center;
+}
+
+.manner p {
+	
+	margin-right: 15px;
+}
+
+.nickname{
+	
+	text-align: center
+}
+
+
 
 #accordionExample {
       width: 15%;
@@ -135,6 +193,7 @@
     
   
 }
+
 
 .accordion-button collapsed{
 	
@@ -154,44 +213,20 @@
 	
 	
 }
+
 .accordion-collapse {
   overflow: auto; 
+}
+.accordion-collapse::-webkit-scrollbar {
+	display: none;
+}
+.accordion-collapse.collapsing {
+	height: 700px !important;
 }
 
 .accordion-body {
      max-height: 700px;
 }
-.accordion-collapse collapsing{
-	
-	height: 700px;
-}
-.memberTable {
-  border: 1px solid;
-  
-  padding: 20px;
-  border-radius: 20px;
-  margin-bottom: 10px;
-}
-.memberTable ui{
-	
-	display: flex;
-   
-    flex-direction: column;
-}
-.member-grade {
-  width: 50px;
-  text-align: center;
-  font-weight: bold;
-      text-wrap: nowrap;
-  
-}
-
-.member-grade span {
-  color: rgb(252, 177, 3);
-  font-size: 20px;
-  
-}
-
 
 
 
@@ -209,20 +244,61 @@
 }
 
 
-.member-img-icon-nickname-manner{
-	display: flex;
-}
-.nickname-manner {
+
+
+#menu{
+	  width: 16.4%;
+    position: fixed;
+    right: 0px;
+    z-index: 99;
+    margin-top: 80px;	
+    border-top: 1px solid black;
+     border-left: 1px solid black;
+      border-right: 1px solid black;
+      background: white;
 	
-	    display: flex;
+	
+}
+.mainMenu{
+	font-weight: bold;
+	font-size:32px;
+	 cursor: pointer;
+}
+#menu li{
+	text-align: center;
+	padding : 10px;
+	border-bottom: 1px black solid;
+	font-family: "Jua",sans-serif;
+	
+}
+ul li:not(:first-of-type) {
+  display: none;
+}
+
+#calendar-info{
+	
+	display: flex;
     flex-direction: column;
     justify-content: center;
-        position: relative;
-    top: 12px;
-}
-.manner{
-	display:flex;
-	justify-content: center;
     align-items: center;
+    width: 100%;
+
+
+}
+
+#calendar-info p{
+font-family: "Do Hyeon", sans-serif;
+font-size: 60px;
+font-weight: bold;
+padding:10px;
+
+}
+
+#calendar {
+  background: white;
+  width: 500px;
+  height: 600px;
+ 
+  
 }
 
