--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -29,11 +29,17 @@ body {
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
-h1 {
+h1{
 	text-align: center;
 	font-size: 1.5rem;
-	font-weight: bolder;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
+label {
+	text-align: center;
+	font-size: 1.2rem;
+	font-weight: bold;
 	margin-bottom: 20px;
 }
 
@@ -61,19 +67,22 @@ input, select {
 	border-radius: 4px;
 	box-sizing: border-box;
 }
-
+#addr-btn{
+	cursor: pointer;
+}
 button {
-	background-color: #1b2a41;
+	background-color: #fca311;
 	color: white;
 	padding: 10px 15px;
 	border: none;
 	border-radius: 4px;
+	font-weight: bold;
 	cursor: pointer;
 	width: 100%;
 }
 
 button:hover {
-	background-color: #324a5f;
+	background-color: #e76f00;
 }
 
 #checkbox {
