--- a/src/main/resources/static/css/memberDelete.css
+++ b/src/main/resources/static/css/memberDelete.css
@@ -30,11 +30,11 @@ strong {
 
 }
 .container {
+	width: 100%;
 	max-width: 800px;
-	min-width: 800px;
 	padding: 20px;
 	margin-top: 120px;
-	background: #fff;
+	background: honeydew;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -124,7 +124,7 @@ strong {
 
 
 #button {
-	background-color: #1b2a41;
+	background-color: #fca311;
 	color: white;
 	padding: 10px 15px;
 	border: none;
@@ -134,5 +134,5 @@ strong {
 }
 
 #button:hover {
-	background-color: #324a5f;
+	background-color: #e76f00;
 }
