--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -5,32 +5,11 @@ body {
 	padding: 0;
 	background-color: #f4f4f4;
 }
-
-/* 헤더 nav */
-nav {
-	overflow: hiddlen;
-	white-space: nowrap;
-	background-color: #333;
+.profile_file{
 	display: flex;
-	justify-content: space-between;
-	padding: 5px;
+	align-items: center;
+	justify-content: center;
 }
-
-nav a {
-	color: #fff;
-	text-decoration: none;
-	padding: 10px 20px;
-	display: inline-block;
-}
-
-nav a:hover {
-	background-color: #575757;
-}
-
-#LOGO {
-	font-size: 1rem;
-}
-
 input[type=text] {
 	width: 100%;
 	height: 30px;
@@ -39,13 +18,14 @@ input[type=text] {
 	border-radius: 10px;
 	background-color: rgb(233, 233, 233);
 }
-.top-container{
+
+.box {
 	display: flex;
-	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-
+	padding-top: 120px;
 }
+
 .club-button {
 	display: flex;
 	align-items: center;
@@ -53,24 +33,39 @@ input[type=text] {
 }
 
 /* 정보 컨테이너 */
-.info_container {
-	background-color: #fff;
-	border-radius: 8px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	max-width: 600px;
-	min-width: 600px;
-	margin-top: 120px;
-	padding: 20px;
-	text-align: center;
-	
-}
 
+
+.container {
+	width: 100%;
+    max-width: 800px;
+	margin: auto;
+	padding: 10px;
+	border-radius: 12px;
+	background-color: #fff;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	background: honeydew;
+	margin-bottom: 20px;
+}
 
 .profile {
 	font-size: 1.5rem;
 	font-weight: bolder;
 	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-bottom: 20px;	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.profile_img {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .profile_img img {
@@ -88,20 +83,22 @@ input[type=text] {
 .profile_update>* {
 	margin-bottom: 20px;
 }
+
 .profile_manner {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 	font-weight: bolder;
 }
 
-.profile_manner p{
+.profile_manner p {
 	font-size: 1.2rem;
 	font-weight: bolder;
 	padding-right: 10px;
 }
-.profile_manner h1{
+
+.profile_manner h1 {
 	font-size: 1.2rem;
 	font-weight: bolder;
 	padding-right: 10px;
@@ -109,68 +106,72 @@ input[type=text] {
 
 .profile_info {
 	display: flex;
-	align-items:center;
+	align-items: center;
 	justify-content: center;
 	padding-right: 20px;
 }
-.profile_info span{
+
+.profile_info span {
 	white-space: nowrap;
 	padding-left: 20px;
 	width: 150px;
 	font-size: 1.2rem;
 	font-weight: bolder;
 }
-.profile_info input{
+
+.profile_info input {
 	padding-left: 20px;
 	padding-right: 20px;
 }
-.profile_submit{
-	display:flex;
+
+.profile_submit {
+	display: flex;
 	flex-direction: column;
 	align-items: center;
-
 }
+
 #updateSubmit {
-	background-color: #1b2a41;
+	background-color: #fca311;
 	color: white;
 	padding: 10px 15px;
 	border: none;
 	border-radius: 6px;
-	cursor: pointer;
-	width: 40%;
+	width: 50%;
+	height: 50px;
 	margin-top: 20px;
 	font-size: 1rem;
-}
-#updateCheck{
-	background-color: #393d3f;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	border: none;
-	border-radius: 6px;
-	cursor: pointer;
-	width: 30%;
-	margin-top: 60px;
-	font-size: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
+#updateCheck {
+	background-color: #fca311;
+	color: white;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 6px;
+	width: 50%;
+	height: 50px;
+	margin-top: 20px;
+	font-size: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+
+
+
 #submit:hover {
-	background-color: #324a5f;
+	background-color: #e76f00;
 }
 
 #updateCheck:hover {
-	background-color: #324a5f;
+	background-color: #e76f00;
 }
-
-/* 가입 대기중인 클럽 보기 */
-.container {
-	max-width: 600px;
-	min-width: 600px;
-	margin: 20px auto;
-	padding: 20px;
-	background-color: #fff;
-	border-radius: 8px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+#updateSubmit:hover {
+	background-color: #e76f00;
 }
 
 #all-club, #manage-club, #wait-club {
@@ -191,7 +192,7 @@ input[type=text] {
 }
 
 .membership-card {
-	display: none; 
+	display: none;
 	padding: 20px;
 	border: 1px solid #ddd;
 	border-radius: 8px;
@@ -199,19 +200,20 @@ input[type=text] {
 	margin-bottom: 20px;
 	overflow: hiddlen;
 	white-space: nowrap;
+	width: 90%;
 }
+
 .membership-card h1 {
 	font-weight: bolder;
 	padding-bottom: 15px;
 }
 
 .membership-img {
-	width: 100px; 
-	height: 100px; 
-	object-fit: cover; 
+	width: 100px;
+	height: 100px;
+	object-fit: cover;
 	border-radius: 8px;
 	border: 2px solid #ddd;
-	
 }
 
 .membership-create {
@@ -232,7 +234,8 @@ input[type=text] {
 	display: flex;
 	flex-direction: column;
 }
-.membership-String h4{
+
+.membership-String h4 {
 	padding-bottom: 20px;
 	font-size: 1.2rem;
 	font-weight: 500;
@@ -240,18 +243,18 @@ input[type=text] {
 
 .membership-String p {
 	padding-bottom: 20px;
-	
 }
-.membership-text{
+
+.membership-text {
 	width: 350px;
 	height: 100%;
 }
 
 /* 버튼 스타일 */
 #make-club, #all-club-button, #manage-club-button, #wait-club-button,
-	#update-club{
+	#update-club {
 	width: 100%;
-	background-color: #0c1821;
+	background-color: #fca311;
 	color: white;
 	border: none;
 	border-radius: 5px;
@@ -260,21 +263,18 @@ input[type=text] {
 	align-items: center;
 	justify-content: center;
 	padding: 10px 10px;
-	margin: 10px 5px 20px 5px;
+	margin: 20px;
 	overflow: hiddlen;
 	white-space: nowrap;
 }
 
 #all-club-button:hover, #manage-club-button:hover, #wait-club-button:hover,
-	#update-club-button:hover ,#make-club:hover,#update-club:hover {
-	background-color: #ccc9dc;
-	color: black;
+	#update-club-button:hover, #make-club:hover, #update-club:hover {
+	background-color: #e76f00;
 	font-weight: bolder;
 	overflow: hiddlen;
 	white-space: nowrap;
-	
 }
-
 
 :root {
 	--btn-width: 30vw;
@@ -293,11 +293,6 @@ input[type=text] {
 }
 
 #label {
-	min-width: var(--btn-min-width);
-	min-height: var(--btn-min-height);
-	background-color: whitesmoke;
-	border-radius: var(--border-rad);
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -306,6 +301,8 @@ input[type=text] {
 	margin-bottom: 10px;
 	overflow: hiddlen;
 	white-space: nowrap;
+	width: 30%;
+	height: 50px;
 }
 
 #arrow {
@@ -317,11 +314,6 @@ input[type=text] {
 }
 
 #menu {
-	min-width: var(--btn-min-width);
-	background-color: whitesmoke;
-	border-radius: var(--border-rad);
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-	top: calc(var(--btn-height)+ 3vh);
 	display: flex;
 	flex-flow: column;
 	justify-content: center;
@@ -329,6 +321,7 @@ input[type=text] {
 	opacity: 0;
 	overflow: hidden;
 	transition: 0.5s ease-in-out;
+	width: 50%;
 }
 
 #toggle:checked ~ #menu {
