--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -27,8 +27,8 @@ body {
 
 }
 .container {
-	max-width: 600px;
-	min-width: 600px;
+	width: 100%;
+	max-width: 800px;
 	padding: 20px;
 	margin-top: 120px;
 	background-color: #fff;
@@ -69,7 +69,7 @@ input, select {
 }
 
 button {
-	background-color: #1b2a41;
+	background-color: #fca311;
 	color: white;
 	padding: 10px 15px;
 	border: none;
@@ -79,7 +79,7 @@ button {
 }
 
 button:hover {
-	background-color: #324a5f;
+	background-color: #e76f00;
 }
 
 #checkbox {
