--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -31,7 +31,7 @@ body {
 	max-width: 800px;
 	padding: 20px;
 	margin-top: 120px;
-	background-color: #fff;
+	background: honeydew;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
